--- a/index.css
+++ b/index.css
@@ -15,4 +15,17 @@
   /*
     misc styles, nothing to do with CSS variables
   */
- 
+  body {
+    text-align: center;
+    font-family: 'helvetica neue', sans-serif;
+    font-weight: 100;
+    font-size: 50px;
+    background-color: var(--bg, white);
+    color: var(--bg-text, black)
+  }
+  .controls {
+    margin-bottom: 50px;
+  }
+  input {
+    width: 100px;
+  }
